fix layout bugs

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -45,15 +45,23 @@ h4 {
     color:#677789;
 }
 .info {
- margin: 0.5rem 0;
+    margin: 0.5rem 0;
+
 }
 
+.straindescription {
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space: nowrap;
+}
+
+
 .info > img, .info > a > img, .info > a > div {
-  box-shadow: #000 1px 1px 2px, #94ffa5 2px 2px 2px;
-  border-radius:0.25rem;
-  max-width:660px;
-  width:100%;
-  margin: 0.5rem 0;
+    box-shadow: #000 1px 1px 2px, #94ffa5 2px 2px 2px;
+    border-radius:0.25rem;
+    max-width:660px;
+    width:100%;
+    margin: 0.5rem 0;
 }
 
 a:link, a:hover, a:active, a:visited {
@@ -94,7 +102,7 @@ input[type="checkbox"] {
     transition: all 0.25s ease-in-out;
 }
 
-input[type=text], input[type=number], textarea {
+form, input[type=text], input[type=number], input[type=select], textarea {
     font-size: 16px;
 }
 
